[package]
name = "flocknet"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
rand_distr = "0.4"
dashmap = "6.1"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.10"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
tokio-utils = "0.1.2"
tokio-util = "0.7.17"
wincode = "0.2.5"
wincode-derive = "0.2.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features] # TODO
default = []
latex-export = []
